<resources>
    <string name="app_name">Att</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_id">Student ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="program">Program</string>
    <string name="add_student">+ Add Student</string>
    <string name="add_student_label">Add Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="add_course">+ Add Course</string>
    <string name="enter_course_code">Enter Course Code</string>
    <string name="edit_course">Edit Course</string>
    <string name="unenroll_students">Unenroll Students</string>
    <string name="enroll_students">Enroll Students</string>
    <string name="view_enrolled_students">View Enrolled</string>
    <string name="edit">Edit</string>
    <string name="enroll_student">Enroll Student</string>
</resources>