<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateStudent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_student_label"
            android:layout_marginBottom="20dp"
            android:textSize="30sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/student_id"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/first_name"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/last_name"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/program_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/program"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/male_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:onClick="selectGender"/>
            <RadioButton
                android:id="@+id/female_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:layout_marginStart="30dp"
                android:onClick="selectGender"/>
        </RadioGroup>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_student"
            android:onClick="createStudent"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>